fixed bug with truncating scene/prompt boxes

--- a/app/assets/stylesheets/scenes.css.scss
+++ b/app/assets/stylesheets/scenes.css.scss
@@ -2,7 +2,7 @@ $lightaccent: #60C8F5;
 
 .scene {
   position: relative;
-  min-height: 110px;
+  min-height: 135px;
  
   .scene-info {
     font-size: larger;
